WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92410
<svg> element with no intrinsic size and max-width gets sized incorrectly
https://bugs.webkit.org/show_bug.cgi?id=92410
Summary
<svg> element with no intrinsic size and max-width gets sized incorrectly
mitz
Reported
2012-07-26 11:58:35 PDT
Created
attachment 154713
[details]
Test case In the attached test case, the <svg> element ends up having a width of 300px (based on the default 300-by-150 for replaced elements with no intrinsic size) instead of 400px (based on its width attribute specifying 100%).
Attachments
Test case
(292 bytes, text/html)
2012-07-26 11:58 PDT
,
mitz
no flags
Details
Apply the rule for computing the width of elements with auto width and height, and intrinsic ratio but no intrinsic size to all such elements, regardless of whether they have a content renderer
(3.98 KB, patch)
2012-07-26 12:57 PDT
,
mitz
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-07-26 12:01:36 PDT
<
rdar://problem/11966895
>
mitz
Comment 2
2012-07-26 12:57:29 PDT
Created
attachment 154726
[details]
Apply the rule for computing the width of elements with auto width and height, and intrinsic ratio but no intrinsic size to all such elements, regardless of whether they have a content renderer
mitz
Comment 3
2012-07-26 13:11:11 PDT
Fixed in <
http://trac.webkit.org/r123785
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug