<svg> element with no intrinsic size and max-width gets sized incorrectly https://bugs.webkit.org/show_bug.cgi?id=92410

Reviewed by Dean Jackson.

Source/WebCore:

Test: svg/css/max-width-2.html

* rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::computeReplacedLogicalWidth): The rule for computing the width for
elements whose computed width and height are both auto and which have no intrinsic size, but
have an intrinsic ratio was applied only to elements with a content renderer (such as <img>
with an SVG source). Removed the requirement to have a content renderer, so that it will
apply to all elements including <svg>.

LayoutTests:

* svg/css/max-width-2-expected.html: Added.
* svg/css/max-width-2.html: Added.



Canonical link: https://commits.webkit.org/110221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123785 268f45cc-cd09-0410-ab3c-d52691b4dbfc